# richvalues

./: LICENSE  README.md  __init__.py  bld.bat  classpipeline.py  classreduction.py  description.md  meta.yaml  pyproject.toml  richvalues.py  setup.py  tutorial.ipynb  tutorial.md
example/: observed-column-densities.csv  ratio.py
examples/: example-linearfit.py  example-ratio.ipynb  example-ratio.py  linear-data.csv  linearfit.ipynb  linearfit.py  observed-column-densities.csv  pdfs.ipynb  quick-tutorial.ipynb  ratio.ipynb  ratio.py  tutorial-linearfit.ipynb  tutorial-pdfs.ipynb  tutorial-ratio.ipynb  tutorial.ipynb
richvalues/: __init__.py  richvalues.py
