[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "richvalues"
version = "1.2.2"
description = "Python library for working with uncertainties and upper/lower limits"
license = {file="LICENSE"}
authors = [{name="Andrés Megías Toledano"}]
readme = "README.md"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
