[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "richvalues"
version = "4.1.2"
description = "Python library for working with uncertainties and upper/lower limits"
license = {file="LICENSE"}
authors = [{name="Andrés Megías Toledano"}]
readme = "description.md"
dependencies = ["numpy", "pandas", "scipy", "matplotlib"]
classifiers = ["Programming Language :: Python :: 3",
               "License :: OSI Approved :: BSD License",
               "Operating System :: OS Independent"]
[project.urls]
homepage = "https://github.com/andresmegias/richvalues/"
documentation = "https://github.com/andresmegias/richvalues/blob/main/userguide.pdf"
